Shader code may issue swizzles for the argument of interpolateAtSample, but this is not allowed
One failing shader: spec/arb_gpu_shader5/execution/built-in-functions/fs-interpolateAtSample-block-array.shader_test
0:17(48): error: parameter interpolant must not be swizzled
temp0[0].xyz = vec3((vec4(interpolateAtSample( temp0[0].xyzz , (ivec4(0,0,0,0)).x))));